# PS2020SS

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml
archive/: index.html
css/: mystyle.css
docs/: index.md
docs/notebooks/: 01_動作確認.ipynb  02_高機能な電卓.ipynb  03_条件判断.ipynb  04_反復処理.ipynb  05_関数.ipynb  06_グラフの描画.ipynb  07_文字列処理.ipynb  08_乱数.ipynb  09_モンテカルロ法.ipynb  10_ランダムウォーク.ipynb  11_フラクタル.ipynb  12_セルオートマトン.ipynb  13_方程式の解.ipynb  14_運動のシミュレーション.ipynb
notebooks/: 01_動作確認.ipynb  02_高機能な電卓.ipynb  03_条件判断.ipynb  04_反復処理.ipynb  05_関数.ipynb  06_グラフの描画.ipynb  07_文字列処理.ipynb  08_乱数.ipynb  09_モンテカルロ法.ipynb  10_ランダムウォーク.ipynb  11_フラクタル.ipynb  12_セルオートマトン.ipynb  13_方程式の解.ipynb  14_運動のシミュレーション.ipynb  907_メロス.ipynb  909_インタラクティブにモンテカルロする.ipynb  909_秘書問題.ipynb  90_メロス.ipynb  913_ライフゲーム.ipynb  99_サンプルプログラム.ipynb  index.md
scripts/: check-spell.py  make-footnotes.py  make-links.py  viewer.py
search/: search_index.json
