[tool.poetry]
name = "ps2020ss"
version = "0.1.0"
description = ""
authors = ["Takahiro Ueda <tueda@st.seikei.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.6.1"

ipywidgets = "^7.5.1"
jupyterlab = "^2.1.0"
matplotlib = "^3.2.1"
mpmath = "^1.1.0"
pandas = "^1.0.3"
scipy = "^1.4.1"

mkdocs = "^1.1"
mkdocs-cinder = "^1.0.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.2"
flake8-comprehensions = "^3.2.2"
flake8-docstrings = "^1.5.0"
mypy = "^0.770"
pep8-naming = "^0.10.0"
pre-commit = "^2.2.0"
reorder-python-imports = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
